welcome.lessons.welcome.array.island.Island.scala.error
island:44: error: reassignment to val
		B=c
                 ^island:46: error: reassignment to val
		B=a
                 ^island:48: error: reassignment to val
		B=Math.min(a,c)
                 ^